--- a/p8105_hw1_yl5214.md
+++ b/p8105_hw1_yl5214.md
@@ -31,7 +31,7 @@ ncol(early_january_weather)
 \*The mean temperature is 39.58212:
 
 ``` r
-mean(early_january_weather$temp)
+mean(early_january_weather $ temp)
 ```
 
     ## [1] 39.58212
@@ -89,18 +89,18 @@ example_df
 ```
 
     ## # A tibble: 10 × 4
-    ##      samp vec_logical vec_character vec_factor
-    ##     <dbl> <lgl>       <chr>         <fct>     
-    ##  1  0.418 TRUE        one           level 1   
-    ##  2 -0.736 FALSE       one           level 1   
-    ##  3 -1.14  FALSE       one           level 1   
-    ##  4 -0.129 FALSE       one           level 2   
-    ##  5 -0.558 FALSE       one           level 2   
-    ##  6  0.945 TRUE        one           level 2   
-    ##  7  2.42  TRUE        one           level 3   
-    ##  8 -3.02  FALSE       one           level 3   
-    ##  9 -0.202 FALSE       one           level 3   
-    ## 10 -0.444 FALSE       one           level 3
+    ##       samp vec_logical vec_character vec_factor
+    ##      <dbl> <lgl>       <chr>         <fct>     
+    ##  1 -2.20   FALSE       one           level 1   
+    ##  2  0.0311 TRUE        one           level 1   
+    ##  3 -1.08   FALSE       one           level 1   
+    ##  4 -0.660  FALSE       one           level 2   
+    ##  5 -0.650  FALSE       one           level 2   
+    ##  6  0.333  TRUE        one           level 2   
+    ##  7  0.753  TRUE        one           level 3   
+    ##  8 -1.34   FALSE       one           level 3   
+    ##  9  1.80   TRUE        one           level 3   
+    ## 10 -0.694  FALSE       one           level 3
 
 \*Take the mean of each variable
 
@@ -108,13 +108,13 @@ example_df
 mean(pull(example_df, samp))
 ```
 
-    ## [1] -0.2437425
+    ## [1] -0.3705843
 
 ``` r
 mean(pull(example_df, vec_logical))
 ```
 
-    ## [1] 0.3
+    ## [1] 0.4
 
 ``` r
 mean(pull(example_df, vec_character))
@@ -134,9 +134,9 @@ mean(pull(example_df, vec_factor))
 
     ## [1] NA
 
-The mean of random sample and logical vector are 0.1053142 and 0.6. The
-mean of charactor and factor vector didn’t work because arguments are
-not numeric or logical.
+The mean of random sample is -0.3705843and the mean of logical vector is
+`rmean(pull(example_df, vec_logical))`. The mean of charactor and factor
+vector didn’t work because arguments are not numeric or logical.
 
 \*Explicitly convert variables from one type to another
 
