New version that change the mean

--- a/p8105_hw1_yl5214.md
+++ b/p8105_hw1_yl5214.md
@@ -91,16 +91,16 @@ example_df
     ## # A tibble: 10 × 4
     ##       samp vec_logical vec_character vec_factor
     ##      <dbl> <lgl>       <chr>         <fct>     
-    ##  1 -2.20   FALSE       one           level 1   
-    ##  2  0.0311 TRUE        one           level 1   
-    ##  3 -1.08   FALSE       one           level 1   
-    ##  4 -0.660  FALSE       one           level 2   
-    ##  5 -0.650  FALSE       one           level 2   
-    ##  6  0.333  TRUE        one           level 2   
-    ##  7  0.753  TRUE        one           level 3   
-    ##  8 -1.34   FALSE       one           level 3   
-    ##  9  1.80   TRUE        one           level 3   
-    ## 10 -0.694  FALSE       one           level 3
+    ##  1  1.18   TRUE        one           level 1   
+    ##  2 -0.887  FALSE       one           level 1   
+    ##  3  0.634  TRUE        one           level 1   
+    ##  4 -0.473  FALSE       one           level 2   
+    ##  5  1.37   TRUE        one           level 2   
+    ##  6 -0.167  FALSE       one           level 2   
+    ##  7  0.336  TRUE        one           level 3   
+    ##  8  0.0156 TRUE        one           level 3   
+    ##  9  0.631  TRUE        one           level 3   
+    ## 10  0.110  TRUE        one           level 3
 
 \*Take the mean of each variable
 
@@ -108,13 +108,13 @@ example_df
 mean(pull(example_df, samp))
 ```
 
-    ## [1] -0.3705843
+    ## [1] 0.2756017
 
 ``` r
 mean(pull(example_df, vec_logical))
 ```
 
-    ## [1] 0.4
+    ## [1] 0.7
 
 ``` r
 mean(pull(example_df, vec_character))
@@ -134,9 +134,9 @@ mean(pull(example_df, vec_factor))
 
     ## [1] NA
 
-The mean of random sample is -0.3705843and the mean of logical vector is
-`rmean(pull(example_df, vec_logical))`. The mean of charactor and factor
-vector didn’t work because arguments are not numeric or logical.
+The mean of random sample is 0.2756017and the mean of logical vector is
+0.7. The mean of charactor and factor vector didn’t work because
+arguments are not numeric or logical.
 
 \*Explicitly convert variables from one type to another
 
